--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         </div>
     </div>
     <script src="main.js"></script>
+    <footer>
+        <div>
+            <p>© 2025 | All rights reserved by Abderrahmane Liaichi</p>
+        </div>
+    </footer>
 </body>
+    
 
 </html>
+
