--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input onkeyup="getTotal()" type="number" id="taxes" placeholder="Taxes">
                 <input onkeyup="getTotal()" type="number" id="ads" placeholder="Ads">
                 <input onkeyup="getTotal()" type="number" id="discount" placeholder="Discount">
-                <small class='total' id="total"></small>
+                <small class='iteam5' id="total"></small>
             </div>
             <div class="mobile-resp">
                 <small id="total"></small>
@@ -67,4 +67,5 @@
     
 
 </html>
+
 
